<resources>
    <string name="app_name">StepOut</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="create_new_account">Create a New Account</string>
    <string name="stepout_title">StepOut</string>
    <string name="singUp_screen_content">Hello! Please tell us a little bit about yourself.</string>
    <string name="email_address">Email Address</string>
    <string name="name_form">Name</string>
    <string name="password_form">Password</string>
    <string name="confirm_password_form">Confirm Password</string>
    <string name="your_email_address_hint">Your Email Address</string>
    <string name="your_name_hint">Your Name</string>
    <string name="your_password_hint">Your password</string>
    <string name="re_enter_your_password_hint">Re-Enter your password</string>
    <string name="next_btn_text">NEXT</string>
    <string name="skip_text">SKIP</string>
    <string name="add_profile_pic_text">Add your profile picture. </string>
    <string name="add_profile_pic_support_text">Makes it easier to find you.</string>
</resources>
