<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SingUpActivity"
    android:background="@color/sign_up_bg">

    <LinearLayout
        android:id="@+id/signUp_top_linear"
        android:layout_width="match_parent"
        android:layout_height="20dp">

        <ImageButton
            android:id="@+id/signUp_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="Back button"/>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:clickable="false"/>

        <TextView
            android:id="@+id/signUp_skip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/skip_text"
            android:textColor="#1B1C20"
            android:alpha="0.5"/>
    </LinearLayout>

    <TextView
        android:id="@+id/singupPage_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/singUp_screen_content"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/Segoe UI Semibold"
        android:layout_below="@+id/signUp_top_linear"
        />

    <LinearLayout
        android:id="@+id/signUp_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/singupPage_info">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_form"
                android:textColor="@color/white"
                android:fontFamily="sans-serif"
                android:textSize="17sp"/>

            <AutoCompleteTextView
                android:id="@+id/signUp_form_name"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:paddingLeft="25dp"
                android:hint="@string/your_name_hint"
                android:inputType="text"
                android:background="@drawable/next_btn_bg"
                android:textColorHint="@color/textColorHint"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_address"
                android:textColor="@color/white"
                android:fontFamily="sans-serif"
                android:textSize="17sp"/>

            <AutoCompleteTextView
                android:id="@+id/signUp_form_email"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:paddingLeft="25dp"
                android:inputType="textEmailAddress"
                android:background="@drawable/next_btn_bg"
                android:hint="@string/your_email_address_hint"
                android:textColorHint="@color/textColorHint"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password_form"
                android:textColor="@color/white"
                android:fontFamily="sans-serif"
                android:textSize="17sp"/>

            <AutoCompleteTextView
                android:id="@+id/signUp_form_password"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:paddingLeft="25dp"
                android:inputType="textPassword"
                android:hint="@string/your_password_hint"
                android:background="@drawable/next_btn_bg"
                android:textColorHint="@color/textColorHint"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirm_password_form"
                android:textColor="@color/white"
                android:fontFamily="sans-serif"
                android:textSize="17sp"/>

            <AutoCompleteTextView
                android:id="@+id/signUp_form_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:paddingLeft="25dp"
                android:hint="@string/re_enter_your_password_hint"
                android:inputType="textPassword"
                android:background="@drawable/next_btn_bg"
                android:textColorHint="@color/textColorHint"/>

        </LinearLayout>

    </LinearLayout>

    <!--<ProgressBar-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:indeterminate="false"-->
        <!--/>-->

    <Button
        android:id="@+id/signUp_next_btn"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:text="@string/next_btn_text"
        android:textAlignment="center"
        android:background="@drawable/next_btn_bg"
        android:layout_below="@+id/signUp_form"
        android:layout_centerHorizontal="true"
        />


</RelativeLayout>