<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/add_profile_pic_bg"
    tools:context=".AddProfilePic">

    <!--Part above add image region-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!--Genenrates the back and skip buttons-->
        <LinearLayout
            android:id="@+id/signUp_top_linear"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="5dp">

            <ImageButton
                android:id="@+id/signUp_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="Back button"/>

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:clickable="false"/>

            <TextView
                android:id="@+id/signUp_skip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/skip_text"
                android:textColor="#1B1C20"
                android:alpha="0.5"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_profile_pic_text"
            android:textSize="35sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_marginLeft="64dp"
            android:layout_marginRight="64dp"
            android:layout_marginTop="70dp"
            android:textAlignment="center"/>

        <!--White line in between two text views -->
        <View
            android:layout_width="44dp"
            android:layout_height="2dp"
            android:background="@color/white"
            android:layout_marginTop="5dp"
            android:layout_gravity="center"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_profile_pic_support_text"
            android:textSize="20dp"
            android:textColor="@color/white"
            android:layout_marginLeft="64dp"
            android:layout_marginRight="64dp"
            android:layout_marginTop="10dp"
            android:textAlignment="center"/>

    </LinearLayout>

    <!--Add image button : region -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>



    <!--Bottom portion for status of sign up and next button -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/signUp_next_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/sign_up_indicator_off"
            android:alpha="0.4"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/sign_up_indicator_on"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/sign_up_indicator_off"
            android:alpha="0.4"/>
    </LinearLayout>


    <Button
        android:id="@+id/signUp_next_btn"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:text="@string/next_btn_text"
        android:textAlignment="center"
        android:background="@drawable/next_btn_bg"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"
        android:layout_centerHorizontal="true"
        />


</RelativeLayout>